First working version

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,57 @@
 /Iseger/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
 /Iseger/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 /Iseger/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Iseger/bin/Debug/Iseger.exe
+/Iseger/bin/Debug/Iseger.exe.config
+/Iseger/bin/Debug/Iseger.pdb
+/Iseger/obj/Debug/Iseger.csproj.FileListAbsolute.txt
+/Iseger/obj/Debug/Iseger.exe
+/Iseger/obj/Debug/Iseger.pdb
+/packages/System.Runtime.Numerics.4.3.0/.signature.p7s
+/packages/System.Runtime.Numerics.4.3.0/System.Runtime.Numerics.4.3.0.nupkg
+/packages/System.Runtime.Numerics.4.3.0/ThirdPartyNotices.txt
+/packages/System.Runtime.Numerics.4.3.0/dotnet_library_license.txt
+/packages/System.Runtime.Numerics.4.3.0/lib/MonoAndroid10/_._
+/packages/System.Runtime.Numerics.4.3.0/lib/MonoTouch10/_._
+/packages/System.Runtime.Numerics.4.3.0/lib/net45/_._
+/packages/System.Runtime.Numerics.4.3.0/lib/netcore50/System.Runtime.Numerics.dll
+/packages/System.Runtime.Numerics.4.3.0/lib/netstandard1.3/System.Runtime.Numerics.dll
+/packages/System.Runtime.Numerics.4.3.0/lib/portable-net45+win8+wpa81/_._
+/packages/System.Runtime.Numerics.4.3.0/lib/win8/_._
+/packages/System.Runtime.Numerics.4.3.0/lib/wpa81/_._
+/packages/System.Runtime.Numerics.4.3.0/lib/xamarinios10/_._
+/packages/System.Runtime.Numerics.4.3.0/lib/xamarinmac20/_._
+/packages/System.Runtime.Numerics.4.3.0/lib/xamarintvos10/_._
+/packages/System.Runtime.Numerics.4.3.0/lib/xamarinwatchos10/_._
+/packages/System.Runtime.Numerics.4.3.0/ref/MonoAndroid10/_._
+/packages/System.Runtime.Numerics.4.3.0/ref/MonoTouch10/_._
+/packages/System.Runtime.Numerics.4.3.0/ref/net45/_._
+/packages/System.Runtime.Numerics.4.3.0/ref/netcore50/System.Runtime.Numerics.dll
+/packages/System.Runtime.Numerics.4.3.0/ref/netcore50/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netcore50/de/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netcore50/es/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netcore50/fr/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netcore50/it/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netcore50/ja/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netcore50/ko/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netcore50/ru/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netcore50/zh-hans/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netcore50/zh-hant/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netstandard1.1/System.Runtime.Numerics.dll
+/packages/System.Runtime.Numerics.4.3.0/ref/netstandard1.1/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netstandard1.1/de/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netstandard1.1/es/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netstandard1.1/fr/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netstandard1.1/it/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netstandard1.1/ja/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netstandard1.1/ko/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netstandard1.1/ru/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netstandard1.1/zh-hans/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/netstandard1.1/zh-hant/System.Runtime.Numerics.xml
+/packages/System.Runtime.Numerics.4.3.0/ref/portable-net45+win8+wpa81/_._
+/packages/System.Runtime.Numerics.4.3.0/ref/win8/_._
+/packages/System.Runtime.Numerics.4.3.0/ref/wpa81/_._
+/packages/System.Runtime.Numerics.4.3.0/ref/xamarinios10/_._
+/packages/System.Runtime.Numerics.4.3.0/ref/xamarinmac20/_._
+/packages/System.Runtime.Numerics.4.3.0/ref/xamarintvos10/_._
+/packages/System.Runtime.Numerics.4.3.0/ref/xamarinwatchos10/_._
